@@ -1,19 +1,18 @@
 package com.sgi.fiis.users.infrastructure.persistence;
 
 import com.sgi.fiis.users.domain.model.User;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -26,129 +25,88 @@ class UserRepositoryAdapterTest {
     @Mock
     private SpringDataRoleRepository roleRepository;
 
+    @InjectMocks
     private UserRepositoryAdapter adapter;
 
-    @BeforeEach
-    void setUp() {
-        adapter = new UserRepositoryAdapter(springDataRepository, roleRepository);
-    }
-
-    private RoleEntity createRoleEntity() {
+    private RoleEntity getTestRoleEntity() {
         RoleEntity role = new RoleEntity();
         role.setId(1L);
-        role.setCode("DOCENTE");
-        role.setDescription("Docente");
+        role.setCode("ADMIN");
+        role.setDescription("Administrador");
         return role;
     }
 
-    private UserEntity createUserEntity(RoleEntity role) {
-        UserEntity entity = new UserEntity();
-        entity.setId(10L);
-        entity.setDni("12345678");
-        entity.setFirstNames("Juan");
-        entity.setLastNames("Perez");
-        entity.setInstitutionalEmail("juan.perez@unas.edu.pe");
-        entity.setPhone("999888777");
-        entity.setPasswordHash("hashedpassword");
-        entity.setActive(true);
-        entity.setMustChangePassword(false);
-        entity.setRole(role);
-        entity.setOauthProvider("azure");
-        entity.setCreatedAt(LocalDateTime.of(2026, 6, 24, 12, 0));
-        entity.setUpdatedAt(LocalDateTime.of(2026, 6, 24, 12, 0));
-        return entity;
+    private UserEntity getTestUserEntity() {
+        UserEntity user = new UserEntity();
+        user.setId(1L);
+        user.setDni("12345678");
+        user.setFirstNames("Juan");
+        user.setLastNames("Perez");
+        user.setInstitutionalEmail("juan.perez@unas.edu.pe");
+        user.setRole(getTestRoleEntity());
+        user.setActive(true);
+        user.setMustChangePassword(true);
+        return user;
     }
 
-    private User createUserModel() {
+    private User getTestUser() {
         return User.builder()
-                .id(10L)
+                .id(1L)
                 .dni("12345678")
                 .firstNames("Juan")
                 .lastNames("Perez")
                 .institutionalEmail("juan.perez@unas.edu.pe")
-                .phone("999888777")
-                .passwordHash("hashedpassword")
+                .roleCode("ADMIN")
                 .active(true)
-                .mustChangePassword(false)
-                .roleCode("DOCENTE")
-                .roleDescription("Docente")
-                .oauthProvider("azure")
-                .createdAt(LocalDateTime.of(2026, 6, 24, 12, 0))
-                .updatedAt(LocalDateTime.of(2026, 6, 24, 12, 0))
+                .mustChangePassword(true)
                 .build();
     }
 
     @Test
-    @DisplayName("Should successfully save user and map fields")
-    void save_shouldSaveAndMapUser() {
-        User userModel = createUserModel();
-        RoleEntity roleEntity = createRoleEntity();
-        UserEntity userEntity = createUserEntity(roleEntity);
+    @DisplayName("Should save a user successfully")
+    void testSave() {
+        User domain = getTestUser();
+        UserEntity entity = getTestUserEntity();
 
-        when(roleRepository.findByCode("DOCENTE")).thenReturn(Optional.of(roleEntity));
-        when(springDataRepository.save(any(UserEntity.class))).thenReturn(userEntity);
+        when(roleRepository.findByCode("ADMIN")).thenReturn(Optional.of(getTestRoleEntity()));
+        when(springDataRepository.save(any(UserEntity.class))).thenReturn(entity);
 
-        User savedUser = adapter.save(userModel);
+        User result = adapter.save(domain);
 
-        assertNotNull(savedUser);
-        assertEquals(10L, savedUser.getId());
-        assertEquals("12345678", savedUser.getDni());
-        assertEquals("Juan", savedUser.getFirstNames());
-        assertEquals("Perez", savedUser.getLastNames());
-        assertEquals("juan.perez@unas.edu.pe", savedUser.getInstitutionalEmail());
-        assertEquals("DOCENTE", savedUser.getRoleCode());
-        assertEquals("Docente", savedUser.getRoleDescription());
-        assertEquals("azure", savedUser.getOauthProvider());
-        assertTrue(savedUser.isActive());
-        assertFalse(savedUser.isMustChangePassword());
-
-        verify(roleRepository).findByCode("DOCENTE");
+        assertNotNull(result);
+        assertEquals(domain.getDni(), result.getDni());
+        verify(roleRepository).findByCode("ADMIN");
         verify(springDataRepository).save(any(UserEntity.class));
     }
 
     @Test
-    @DisplayName("Should throw RuntimeException when saving user with non-existent role")
-    void save_roleNotFound_shouldThrowException() {
-        User userModel = createUserModel();
-        when(roleRepository.findByCode("DOCENTE")).thenReturn(Optional.empty());
+    @DisplayName("Should throw Exception when saving user with non-existent role")
+    void testSaveRoleNotFound() {
+        User domain = getTestUser();
+        when(roleRepository.findByCode("ADMIN")).thenReturn(Optional.empty());
 
-        RuntimeException ex = assertThrows(RuntimeException.class, () -> adapter.save(userModel));
-        assertEquals("Role not found: DOCENTE", ex.getMessage());
-
-        verify(roleRepository).findByCode("DOCENTE");
+        assertThrows(RuntimeException.class, () -> adapter.save(domain));
+        verify(roleRepository).findByCode("ADMIN");
         verifyNoInteractions(springDataRepository);
     }
 
     @Test
-    @DisplayName("Should find user by id")
-    void findById_shouldReturnUser() {
-        RoleEntity role = createRoleEntity();
-        UserEntity entity = createUserEntity(role);
-        when(springDataRepository.findById(10L)).thenReturn(Optional.of(entity));
+    @DisplayName("Should find user by ID")
+    void testFindById() {
+        UserEntity entity = getTestUserEntity();
+        when(springDataRepository.findById(1L)).thenReturn(Optional.of(entity));
 
-        Optional<User> result = adapter.findById(10L);
+        Optional<User> result = adapter.findById(1L);
 
         assertTrue(result.isPresent());
-        assertEquals(10L, result.get().getId());
-        verify(springDataRepository).findById(10L);
+        assertEquals("12345678", result.get().getDni());
+        verify(springDataRepository).findById(1L);
     }
 
     @Test
-    @DisplayName("Should return empty optional when user by id not found")
-    void findById_notFound_shouldReturnEmpty() {
-        when(springDataRepository.findById(99L)).thenReturn(Optional.empty());
-
-        Optional<User> result = adapter.findById(99L);
-
-        assertFalse(result.isPresent());
-        verify(springDataRepository).findById(99L);
-    }
-
-    @Test
-    @DisplayName("Should find user by dni")
-    void findByDni_shouldReturnUser() {
-        RoleEntity role = createRoleEntity();
-        UserEntity entity = createUserEntity(role);
+    @DisplayName("Should find user by DNI")
+    void testFindByDni() {
+        UserEntity entity = getTestUserEntity();
         when(springDataRepository.findByDni("12345678")).thenReturn(Optional.of(entity));
 
         Optional<User> result = adapter.findByDni("12345678");
@@ -160,9 +118,8 @@ class UserRepositoryAdapterTest {
 
     @Test
     @DisplayName("Should find user by email")
-    void findByEmail_shouldReturnUser() {
-        RoleEntity role = createRoleEntity();
-        UserEntity entity = createUserEntity(role);
+    void testFindByEmail() {
+        UserEntity entity = getTestUserEntity();
         when(springDataRepository.findByInstitutionalEmail("juan.perez@unas.edu.pe")).thenReturn(Optional.of(entity));
 
         Optional<User> result = adapter.findByEmail("juan.perez@unas.edu.pe");
@@ -174,53 +131,45 @@ class UserRepositoryAdapterTest {
 
     @Test
     @DisplayName("Should find all users")
-    void findAll_shouldReturnList() {
-        RoleEntity role = createRoleEntity();
-        UserEntity entity = createUserEntity(role);
-        when(springDataRepository.findAll()).thenReturn(List.of(entity));
+    void testFindAll() {
+        UserEntity entity = getTestUserEntity();
+        when(springDataRepository.findAll()).thenReturn(Collections.singletonList(entity));
 
         List<User> result = adapter.findAll();
 
-        assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals("Juan", result.get(0).getFirstNames());
+        assertEquals("12345678", result.get(0).getDni());
         verify(springDataRepository).findAll();
     }
 
     @Test
     @DisplayName("Should search users by query")
-    void search_shouldReturnMatchingUsers() {
-        RoleEntity role = createRoleEntity();
-        UserEntity entity = createUserEntity(role);
-        when(springDataRepository.search("Juan")).thenReturn(List.of(entity));
+    void testSearch() {
+        UserEntity entity = getTestUserEntity();
+        when(springDataRepository.search("Juan")).thenReturn(Collections.singletonList(entity));
 
         List<User> result = adapter.search("Juan");
 
-        assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals("Juan", result.get(0).getFirstNames());
+        assertEquals("12345678", result.get(0).getDni());
         verify(springDataRepository).search("Juan");
     }
 
     @Test
     @DisplayName("Should check if user exists by DNI")
-    void existsByDni_shouldReturnBoolean() {
+    void testExistsByDni() {
         when(springDataRepository.existsByDni("12345678")).thenReturn(true);
 
-        boolean exists = adapter.existsByDni("12345678");
-
-        assertTrue(exists);
+        assertTrue(adapter.existsByDni("12345678"));
         verify(springDataRepository).existsByDni("12345678");
     }
 
     @Test
     @DisplayName("Should check if user exists by email")
-    void existsByEmail_shouldReturnBoolean() {
-        when(springDataRepository.existsByInstitutionalEmail("juan.perez@unas.edu.pe")).thenReturn(false);
+    void testExistsByEmail() {
+        when(springDataRepository.existsByInstitutionalEmail("juan.perez@unas.edu.pe")).thenReturn(true);
 
-        boolean exists = adapter.existsByEmail("juan.perez@unas.edu.pe");
-
-        assertFalse(exists);
+        assertTrue(adapter.existsByEmail("juan.perez@unas.edu.pe"));
         verify(springDataRepository).existsByInstitutionalEmail("juan.perez@unas.edu.pe");
     }
 }
